# deancomplete

./: CHANGELOG.md  CMakeLists.txt  README.md  build.bat  configure.bat  package-lock.json  package.json  sample.cpp  vcpkg-configuration.json  vcpkg.bat  vcpkg.json  webpack.config.js
src/: extension.ts
src/ai/: AIAssistant.ts
src/analysis/: CodeAnalyzer.ts
src/database/: SymbolDatabase.ts
src/parser/: CppParser.ts
src/scope/: ScopeManager.ts
src/types/: tree-sitter.d.ts
tools/definition_indexer/: CMakeLists.txt
tools/definition_indexer/src/: main.cpp
